fixed up some style issues with a links

--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -12,3 +12,14 @@
     color: #b6b4b4;
   }
 }
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+  background-color: rgb(5, 5, 5);
+
+  p {
+    color: #b6b4b4;
+  }
+}
