--- a/src/styles/roulette.scss
+++ b/src/styles/roulette.scss
@@ -19,6 +19,16 @@
       display: flex;
       justify-content: center;
       align-items: center;
+
+      a {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-family: "Syne Mono", monospace;
+        font-weight: 700;
+        text-align: center;
+        font-size: 0.8em;
+      }
     }
 
     .perk-roulette {
@@ -52,6 +62,16 @@
       display: flex;
       justify-content: center;
       align-items: center;
+
+      a {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-family: "Syne Mono", monospace;
+        font-weight: 700;
+        text-align: center;
+        font-size: 0.8em;
+      }
     }
 
     .perk-roulette {
