--- a/src/styles/roulette.scss
+++ b/src/styles/roulette.scss
@@ -6,9 +6,11 @@
   .survivor-roulette {
     font-family: "Syne Mono", monospace;
     font-weight: 700;
+    font-size: 0.8em;
     text-align: center;
-    width: 550px;
+    max-width: 400px;
     color: #b6b4b4;
+    margin: 10px;
 
     .page-header {
       display: flex;
@@ -41,17 +43,19 @@
         justify-content: center;
         flex-direction: column;
         align-items: center;
-        width: 500px;
+        max-width: 400px;
         margin-bottom: 50px;
       }
     }
   }
   .killer-roulette {
     font-family: "Syne Mono", monospace;
+    font-size: 1em;
     font-weight: 700;
     text-align: center;
-    width: 550px;
-    color: #b6b4b4;
+    max-width: 400px;
+    color: #a33737;
+    margin: 10px;
 
     .page-header {
       display: flex;
@@ -84,7 +88,7 @@
         justify-content: center;
         flex-direction: column;
         align-items: center;
-        width: 500px;
+        max-width: 400px;
         margin-bottom: 50px;
       }
     }
